--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -11,10 +11,14 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Projects and Interests"/>
-<meta name="twitter:description" content="Interests  My interests are the following:  CyberGIS GIS data analysis spatial analysis programming geospatial data science PRA (mainly HRA) software development    Projects Here are some projects that I&rsquo;ve done in the past! You can open it to a new tab to read it :)"/>
+<meta name="twitter:description" content="Interests  My interests are the following:  CyberGIS GIS data analysis spatial analysis programming geospatial data science PRA (mainly HRA) software development    Projects Here are some projects that I&rsquo;ve done in the past!
+You can open it to a new tab to read it.
+Maps Created to Illustrate Gun Violence in U.S (2019).  3 or more involved are classifed as mass shootings   Ages 13-17 were classified as teens   Ages 0-11 were classified as children  "/>
 
     <meta property="og:title" content="Projects and Interests" />
-<meta property="og:description" content="Interests  My interests are the following:  CyberGIS GIS data analysis spatial analysis programming geospatial data science PRA (mainly HRA) software development    Projects Here are some projects that I&rsquo;ve done in the past! You can open it to a new tab to read it :)" />
+<meta property="og:description" content="Interests  My interests are the following:  CyberGIS GIS data analysis spatial analysis programming geospatial data science PRA (mainly HRA) software development    Projects Here are some projects that I&rsquo;ve done in the past!
+You can open it to a new tab to read it.
+Maps Created to Illustrate Gun Violence in U.S (2019).  3 or more involved are classifed as mass shootings   Ages 13-17 were classified as teens   Ages 0-11 were classified as children  " />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/projects/" />
 
@@ -128,9 +132,23 @@
 </li>
 </ul>
 <h1 id="projects">Projects</h1>
-<p>Here are some projects that I&rsquo;ve done in the past! <em>You can open it to a new tab to read it</em> :)</p>
+<p>Here are some projects that I&rsquo;ve done in the past!</p>
+<p><em>You can open it to a new tab to read it.</em></p>
 <p><img src="/images/poster1.jpg" alt="Teen Birth Rates and Below Poverty Rates in Mississippi"></p>
 <p><img src="/images/poster2.jpg" alt="Correlation Between Teen Pregancy Rate and Poverty Rate"></p>
+<h2 id="maps-created-to-illustrate-gun-violence-in-us-2019">Maps Created to Illustrate Gun Violence in U.S (2019).</h2>
+<p><img src="/images/shoot19.png" alt="Mass Shootings in 2019 that resulted death or Injury"></p>
+<ul>
+<li>3 or more involved are classifed as mass shootings</li>
+</ul>
+<p><img src="/images/teenkilledin.png" alt="Gun violence involving in Teen Death or Injury"></p>
+<ul>
+<li>Ages 13-17 were classified as teens</li>
+</ul>
+<p><img src="/images/childrenkilledin.png" alt="Gun violence involing in Child Death or Injury"></p>
+<ul>
+<li>Ages 0-11 were classified as children</li>
+</ul>
 
   </article>
 </section>
