blog code output printed

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,11 +11,11 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About Me"/>
-<meta name="twitter:description" content="Biography Sarah Lee is a junior @ the University of Illinois - Urbana Champaign majoring in Geography &amp; GIS, concentrating in GIS. She comes from a CS background, thus, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah’s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.
+<meta name="twitter:description" content="Biography Sarah Lee is a junior @ the University of Illinois at Urbana- Champaign majoring in Geography &amp; GIS, concentrating in GIS. Coming from a CS background, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah&rsquo;s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.
 Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken."/>
 
     <meta property="og:title" content="About Me" />
-<meta property="og:description" content="Biography Sarah Lee is a junior @ the University of Illinois - Urbana Champaign majoring in Geography &amp; GIS, concentrating in GIS. She comes from a CS background, thus, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah’s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.
+<meta property="og:description" content="Biography Sarah Lee is a junior @ the University of Illinois at Urbana- Champaign majoring in Geography &amp; GIS, concentrating in GIS. Coming from a CS background, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah&rsquo;s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.
 Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about/" />
@@ -115,7 +115,7 @@ Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken." />
     </header>
 
     <h1 id="biography">Biography</h1>
-<p><strong>Sarah Lee</strong> is a junior @ the University of Illinois - Urbana Champaign majoring in Geography &amp; GIS, concentrating in GIS. She comes from a CS background, thus, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah’s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.</p>
+<p><strong>Sarah Lee</strong> is a junior @ the University of Illinois at Urbana- Champaign majoring in Geography &amp; GIS, concentrating in GIS. Coming from a CS background, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah&rsquo;s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.</p>
 <h1 id="courses">Courses</h1>
 <p><strong>I&rsquo;ve only listed some of the classes that I&rsquo;ve taken. If you would like a full transcript, please contact me.</strong></p>
 <ul>
