--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -14,13 +14,13 @@
 <meta name="twitter:description" content="There are bunch of ways to contact me.
 Email school: saeheel2@illinois.edu
 personal: saeheel98@gmail.com
-LinkedIn Send a message via LinkedIn"/>
+LinkedIn Send a message! LinkedIn"/>
 
     <meta property="og:title" content="Contact" />
 <meta property="og:description" content="There are bunch of ways to contact me.
 Email school: saeheel2@illinois.edu
 personal: saeheel98@gmail.com
-LinkedIn Send a message via LinkedIn" />
+LinkedIn Send a message! LinkedIn" />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/contact/" />
 
@@ -123,7 +123,7 @@ LinkedIn Send a message via LinkedIn" />
 <p>school: <a href="mailto:saeheel2@illinois.edu">saeheel2@illinois.edu</a></p>
 <p>personal: <a href="mailto:saeheel98@gmail.com">saeheel98@gmail.com</a></p>
 <h1 id="linkedin">LinkedIn</h1>
-<p>Send a message via
+<p>Send a message!
 <a href="https://www.linkedin.com/in/saeheel2/">LinkedIn</a></p>
 
   </article>
@@ -174,5 +174,7 @@ fathom('trackPageview');
 
 
   </body>
+
+</html>
 
 </html>
