--- a/public/about/index.html
+++ b/public/about/index.html
@@ -11,12 +11,12 @@
 
     <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="About Me"/>
-<meta name="twitter:description" content="Biography Sarah Lee is a junior @ the University of Illinois at Urbana- Champaign majoring in Geography &amp; GIS, concentrating in GIS. Coming from a CS background, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah&rsquo;s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.
-Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken."/>
+<meta name="twitter:description" content="Biography Sarah Lee is a senior at the University of Illinois at Urbana - Champaign, majoring in Geography &amp; Geographic Information Science (GIS), with a concentration in GIS. She comes from a computer science background and has experience with languages such as Java, Swift, JavaScript, Html &amp; CSS.
+Being interested and being passionate in geospatial analysis, Sarah is knowledgeable in Python and R, and software applications such as ArcGIS, ENVI, QGIS, and GeoDA."/>
 
     <meta property="og:title" content="About Me" />
-<meta property="og:description" content="Biography Sarah Lee is a junior @ the University of Illinois at Urbana- Champaign majoring in Geography &amp; GIS, concentrating in GIS. Coming from a CS background, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah&rsquo;s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.
-Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken." />
+<meta property="og:description" content="Biography Sarah Lee is a senior at the University of Illinois at Urbana - Champaign, majoring in Geography &amp; Geographic Information Science (GIS), with a concentration in GIS. She comes from a computer science background and has experience with languages such as Java, Swift, JavaScript, Html &amp; CSS.
+Being interested and being passionate in geospatial analysis, Sarah is knowledgeable in Python and R, and software applications such as ArcGIS, ENVI, QGIS, and GeoDA." />
 <meta property="og:type" content="article" />
 <meta property="og:url" content="/about/" />
 
@@ -115,7 +115,8 @@ Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken." />
     </header>
 
     <h1 id="biography">Biography</h1>
-<p><strong>Sarah Lee</strong> is a junior @ the University of Illinois at Urbana- Champaign majoring in Geography &amp; GIS, concentrating in GIS. Coming from a CS background, she has a good amount of knowledge in programming on top of GGIS. Because of Sarah&rsquo;s interest in spatial analysis and data science, she is also working towards a Data Science Certificate from the Department of Statistics @ UIUC.</p>
+<p><strong>Sarah Lee</strong> is a senior at the University of Illinois at Urbana - Champaign, majoring in Geography &amp; Geographic Information Science (GIS), with a concentration in GIS. She comes from a computer science background and has experience with languages such as Java, Swift, JavaScript, Html &amp; CSS.</p>
+<p>Being interested and being passionate in geospatial analysis, Sarah is knowledgeable in Python and R, and software applications such as ArcGIS, ENVI, QGIS, and GeoDA. She is currently working on obtaining the Data Science Certificate at the Department of Statistics at UIUC along with her B.S. in GIS.</p>
 <h1 id="courses">Courses</h1>
 <p><strong>I&rsquo;ve only listed some of the classes that I&rsquo;ve taken. If you would like a full transcript, please contact me.</strong></p>
 <ul>
@@ -135,8 +136,7 @@ Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken." />
 <ul>
 <li>SOC 280 - Intro to Social Statistics</li>
 <li>STAT 212 - Biostatistics</li>
-<li>STAT 385 - Statistics Programming Methods
-+</li>
+<li>STAT 385 - Statistics Programming Methods</li>
 </ul>
 </li>
 <li>
@@ -149,7 +149,7 @@ Courses I&rsquo;ve only listed some of the classes that I&rsquo;ve taken." />
 </li>
 </ul>
 <h1 id="resume">Resume</h1>
-<p><img src="/images/resume.png" alt="This is my resume"></p>
+<p><img src="/images/resume1.png" alt="This is my resume"></p>
 
   </article>
 </section>
